--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
-
   <!-- =======================================================
     Theme Name: NewBiz
     Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
@@ -284,19 +282,8 @@
         }).then(data => {
         // Work with JSON data
         var price = data.Data.precio;
-        var porcetn = data.Data.var;
 
-        if (porcetn <= 0) {
-          var color = "color:red";
-          var signo = "";
-
-        }else{
-          var color = "color:green";
-          var signo = " +";
-        }
-        //console.log(price);
-
-        document.getElementById("p1").innerHTML = "<strong>$</strong>"+price.toFixed(4)+" USDT <span style='"+color+"'>"+signo+porcetn.toFixed(2)+"% </span>" ;
+        document.getElementById("p1").innerHTML = "<strong>$</strong>"+price.toFixed(4)+" USDT" ;
         }).catch(err => {
             console.log(err);
             document.getElementById("p1").innerHTML = "Cargando...";
